# Depredict

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  README.md  agent.py  analysis.py  analysis_active.py  app.py  app_consult.py  calibration.py  config.py  consult_agent.py  consultation.py  debate.py  deploy.sh  docker-compose.yml  experiment.py  expert_panels.py  info_partition.py  knowledge_loader.py  lambda_cv.py  reaggregate.py  requirements.txt  retriever.py  scraper.py  significance.py  youtube_collector.py
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  models.py
backend/app/api/: __init__.py  auth.py  debate.py  history.py  market.py  report.py  stripe_webhook.py
backend/app/core/: aggregator.py  calibration.py  debate_agent.py  debate_pipeline.py  info_partition.py  knowledge_loader.py  news_collector.py  reddit_collector.py  retriever.py  youtube_collector.py
backend/app/prompts/: agent_system.txt  debate_round2.txt  debate_round3.txt  meta_prediction.txt
backend/app/services/: edge_detector.py  entity_extractor.py  polymarket_client.py  prospective_tracker.py  report_agent.py  task_manager.py
backend/app/utils/: auth.py  checkpoint.py  logger.py
backend/data/tasks/: 0028313b-ac16-4217-be83-7fd9b3f137ab.json  0a976a81-b1af-47a1-a0ac-f6aa7a18024d.json  10d6fb79-2d7b-4023-a088-ba36ff1f6cdb.json  196e2206-dd35-4cc0-8fa1-12c46ff3dbcc.json  1a6e67cb-8644-4468-a941-372fa91f81d3.json  1e1b109d-30c4-45fe-87bd-8b2473f41563.json  1fa82012-8d84-4040-851b-bea4824afdbd.json  (+48 more)
frontend/: index.html  (+4 more)
(+114 files in other folders)
